phase2_Dev/src/objects/LEAD_Configuration__c.object
<CustomObject>
    <description>This object will be used to set configuration needs for LEAD per type of provider.</description>
    <fields>
        <fullName>Admin_Queue_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin Queue Assignment</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LEAD_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment_Page_Intro__c</fullName>
        <inlineHelpText>This text will be used as an introduction to the attachment page that appears after a portal user filled the incident or injury form. This text will be used independently of the case being an injury or an incident.</inlineHelpText>
        <label>Attachment Page Intro</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment_Selection_Page_Intro__c</fullName>
        <inlineHelpText>Introduction text that will be displayed on the Attachment Selection Page that is opened when a provider updates document on his/her library or during a transaction. This is only for GSA and R&amp;P provider</inlineHelpText>
        <label>Attachment Selection Page Intro</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_of_Address_Fee__c</fullName>
        <description>TO DELETE . NOT IN USE. To be deleted as per story LEAD-2099</description>
        <inlineHelpText>Fee that applies in case of change of address. Set the field to 0 if there is no fee.</inlineHelpText>
        <label>Change of Address Fee</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_of_Address_Instruction__c</fullName>
        <label>Change of Address Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Close_Prior_Expiration_Instruction__c</fullName>
        <label>Close Prior Expiration Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Complaint_Form_Redirect__c</fullName>
        <inlineHelpText>Web page to redirect the user once the complaint is submitted or abandoned.</inlineHelpText>
        <label>Complaint Form Redirect</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Complaints_Confirmation__c</fullName>
        <inlineHelpText>Text that will be used on the Complaints Web Form confirmation page.</inlineHelpText>
        <label>Complaints Confirmation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Complaints_Introduction__c</fullName>
        <inlineHelpText>Text that will be used on the Complaints Web Form introduction page.</inlineHelpText>
        <label>Complaints Introduction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DaysB4Exp2Cre8Renewal__c</fullName>
        <defaultValue>120</defaultValue>
        <description>This value is set to indicate how many days before expiration should the system create a renewal visit.</description>
        <inlineHelpText>This value is set to indicate how many days before expiration should the system create a renewal visit.</inlineHelpText>
        <label>Days before expiration to create renewal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EEC_Licensing_Transaction_Instructions__c</fullName>
        <inlineHelpText>Instructions that will be displayed on the portal after the Provider is selecting this transaction.</inlineHelpText>
        <label>Licensing Transaction Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FCC_Change_Room_Floor_Level_Instruction__c</fullName>
        <label>FCC Change Room / Floor Level Intruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FCC_Change_of_Household_Instruction__c</fullName>
        <label>FCC Change of Household Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FCC_Downgrade_Capacity_Instruction__c</fullName>
        <label>FCC Downgrade Capacity Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FCC_Inactivate_Instruction__c</fullName>
        <label>FCC Inactivate Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FCC_License_Upgrade_Instruction__c</fullName>
        <label>FCC License Upgrade Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FCC_New_License_Instruction__c</fullName>
        <label>FCC New License Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FCC_Re_Active_Instruction__c</fullName>
        <label>FCC Re-Active Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FCC_Renewal_Instruction__c</fullName>
        <label>FCC Renewal Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FCC_Renewal_Significant_Delay__c</fullName>
        <inlineHelpText>This number represents the number of days after expiration date that a renewal should be processed without manager approval. If this number of days after expiration date is passed, the system will require manager approval</inlineHelpText>
        <label>FCC - Renewal Significant Delay</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finalization_Responsible__c</fullName>
        <inlineHelpText>If Admininistrative Team, a task will be created by system in Admin queue so transaction can be finalized. If &quot;Licensor&quot;, no task creation from system. Licensor will finalize and close the transaction themselves.</inlineHelpText>
        <label>Finalization Responsible</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_up_Visit_Estimated_Deadline__c</fullName>
        <inlineHelpText>Set the number of days that will be used to set by default the Estimated Deadline when creating a new follow-up visit: Estimated Deadline = Date of Creation of this visit + this number of day</inlineHelpText>
        <label>Follow-up Visit Estimated Deadline</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GSA_days_Prior_Renewal_Can_Go_To_Meeting__c</fullName>
        <inlineHelpText>For GSA Only. Number of day prior to the expiration of the license a Provider will be able to register for the renewal meeting.</inlineHelpText>
        <label>GSA-Days Prior Renewal Can Go To Meeting</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incident_Involved_Person_Intro__c</fullName>
        <label>Incident - Involved Person Intro</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incidents_Intro__c</fullName>
        <label>Incidents Intro</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Injury_Involved_Person_Intro__c</fullName>
        <label>Injury - Involved Person Intro</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Investig_Non_comp_Default_if_Any__c</fullName>
        <inlineHelpText>This text will be used as default on Investigation Non-Compliance narrative text in case there is at least one non-compliance item identified on this investigation.</inlineHelpText>
        <label>Investig. Non-comp. Default if Any</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <inlineHelpText>This text will be used as default on Investigation Non-Compliance narrative text in case there is no non-compliance identified on this investigation.</inlineHelpText>
        <label>Investig. Non-comp. Default if None</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Large_Group_Instruction__c</fullName>
        <label>Large Group Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Library_Introduction__c</fullName>
        <inlineHelpText>Introduction text that will be displayed on the View Library Page - the main page of the Library. This text should explain the purpose of the library. This is only for Umbrella, GSA, and R&amp;P providers</inlineHelpText>
        <label>Library Introduction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lic_Anniversary_Visit_Estimated_Deadline__c</fullName>
        <inlineHelpText>Number of days used to calculate the visit estimated deadline for visits automatically created by the system for Monitoring Visits / Progress Visits / Mid-Cycle Review Visits / Provisional Visits</inlineHelpText>
        <label>Lic Anniversary Visit Estimated Deadline</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Renewal_Fee__c</fullName>
        <description>TO DELETE . NOT IN USE. To be deleted as per story LEAD-2099</description>
        <label>License Renewal Fee</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>License_Upgrade_Fee__c</fullName>
        <description>TO DELETE . NOT IN USE. To be deleted as per story LEAD-2099</description>
        <label>License Upgrade Fee</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Messages_Alerts_Known_Issues__c</fullName>
        <description>Messages &amp; Alerts - Known Issues text for home page layouts.</description>
        <inlineHelpText>This field is only used on the &quot;Home Page Message &amp; Alerts&quot; record. If you are attempting to edit this field on a different record type (i.e. Family Child Care, Small Group, etc.) there will be no impact on the homepage.</inlineHelpText>
        <label>Messages &amp; Alerts - Known Issues</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Nb_Days_Prior_to_Lic_Anniv_to_Create_Vis__c</fullName>
        <inlineHelpText>Number of days prior to the anniversary date (= middle of the 4 months window) the system will create a monitoring / mid-cycle / progress visit automatically so that the licensor knows that a visit should be scheduled</inlineHelpText>
        <label>Nb Days Prior to Anniv. to Create Vis</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Need_License_Issuance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, then this transaction will require the issuance of a new license after the transaction is closed.</inlineHelpText>
        <label>Need License Issuance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_License_Fee__c</fullName>
        <description>TO DELETE . NOT IN USE. To be deleted as per story LEAD-2099</description>
        <label>New License Fee</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Days_For_Internal_Investig_Due_Da__c</fullName>
        <inlineHelpText>Default number of days for an internal investigation to be received. When an internal investigation is created this number of days is added to the current date to determine the default value of &quot;To Be Provider By&quot; field</inlineHelpText>
        <label>No. of Days For Int. Investig. Due Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Days_For_Investigation_Due_Date__c</fullName>
        <inlineHelpText>Number of days that will be used as default to set the investigation due date.</inlineHelpText>
        <label>No. of Days For Investigation Due Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Days_Prior_Corr_Action_Deadline__c</fullName>
        <inlineHelpText>Number of days prior to the corrective action plan reception deadline the email reminder (template #6) should be sent. If NULL, the reminder will not be sent.</inlineHelpText>
        <label>No. of Days Prior Corr Action Deadline</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Non_Comp_before_longer_visit__c</fullName>
        <inlineHelpText>Max Number of non-compliance in the last 14 months before the system proposed a longer visit tool. For example, if we want to use a longer visit tool if there are 2 or more substantiated citations, the value here should 1 (max 1 before longer visit)</inlineHelpText>
        <label>Number of Non-Comp. before longer visit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_days_for_Investigation_Visit__c</fullName>
        <defaultValue>5</defaultValue>
        <inlineHelpText>Set the number of days that will be used to set by default the Estimated Deadline when creating a new visit for an Investigation: Estimated Deadline = Date of Creation of this visit + this number of day</inlineHelpText>
        <label>Number of days for Investigation Visit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_days_to_receive_response_inv__c</fullName>
        <inlineHelpText>Default number of days given to the provider to fill corrective action plan on an investigation. This deadline will appear in the cover letter narrative and be used for the task created for the user to collect corrective action. Note that email reminder i</inlineHelpText>
        <label>Number of days to receive response (inv)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Home_Latest_News__c</fullName>
        <description>The latest and up to date news for portal users.</description>
        <label>Portal Home Latest News</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Portal_Home_Useful_Links__c</fullName>
        <description>Useful links for portal users on the home page.</description>
        <label>Portal Home Useful Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Portal_Home_Welcome__c</fullName>
        <description>This is the portal&apos;s home page message.</description>
        <label>Portal Home Welcome</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Portal_Transaction_Introduction__c</fullName>
        <label>Portal Transaction Introduction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Re_issuance_of_License_Cert_Instruction__c</fullName>
        <label>Re-issuance of License Cert Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Registration_Page_Instruction__c</fullName>
        <inlineHelpText>For GSA Only. Instruction / Introduction that will be displayed at the top of the Meeting Registration Page</inlineHelpText>
        <label>Registration Page Instruction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tax_Certification_Statement_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this transaction needs a tax certification statement to be signed after submission of this transaction</inlineHelpText>
        <label>Tax Certification Statement Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Attachments_New__c</fullName>
        <label>Transaction Attachments New</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Transaction_Attachments_Renewal__c</fullName>
        <label>Transaction Attachments Renewal</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Transaction_Attachments_Upgrade__c</fullName>
        <label>Transaction Attachments Upgrade</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Transaction_Submission_Disclaimer__c</fullName>
        <description>Disclaimer to be displayed on transaction submission/summary page</description>
        <inlineHelpText>Enter the disclaimer statement to be displayed on license transaction submission/summary page in provider portal.</inlineHelpText>
        <label>Transaction Submission Disclaimer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Visit_Narrative_Summary_Default__c</fullName>
        <inlineHelpText>Text that will be used as default for the visit narrative summary text. Note that the tags #Visit_Date# and #Visit_Reason# will be replaced by the values from the visit object when the text is used.</inlineHelpText>
        <label>Visit Narrative Summary Default</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>LEAD Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_With_Record_Type</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All With Record Type</label>
    </listViews>
    <nameField>
        <label>LEAD Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LEAD Configurations</pluralLabel>
    <recordTypes>
        <fullName>All_Settings</fullName>
        <active>true</active>
        <description>General configuration of LEAD.</description>
        <label>All Settings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Global_Settings</fullName>
        <active>true</active>
        <description>Give configuration capabilities at global level</description>
        <label>Global Settings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Messages_and_Alerts</fullName>
        <active>true</active>
        <description>Configuration for the Home tab &apos;Messages and Alerts&apos; section.</description>
        <label>Messages and Alerts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Per_Provider_Type</fullName>
        <active>true</active>
        <description>Provide Configuration options based on Provider type</description>
        <label>Per Provider Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Per_Transaction_Type</fullName>
        <active>true</active>
        <description>Give Configuration options based on Transaction type</description>
        <label>Per Transaction Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>